# rust-opaque

./: README.md
opaque/: .gitignore  Cargo.toml  Taskfile.yaml
opaque/examples/: librust.h  main.c  print.c
opaque/src/: build.rs  lib.rs  opaque_client.rs  opaque_client_new.rs  opaque_server.rs  opaque_server_new.rs
