[package]
name = "opaque"
version = "0.1.0"
edition = "2021"
build = "./src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opaque-ke = { version = "3.0.0-pre.2", features = [ "argon2" ], path = "../../opaque-ke-3.0.0-pre.2" }
generic-array = "0.14"
rustyline = "10.1.1"
rand = "0.8.5"
p256 = { version = "0.13", default-features = false, features = [
  "hash2curve",
  "voprf",
] }
lazy_static = "1.4.0"
argon2 = { version = "0.5", default-features = false, features = [
  "alloc",
] }

[build-dependencies]
cbindgen = "0.20.0"

[lib]
name = "rust"
path = "./src/lib.rs"
crate-type = ["staticlib", "cdylib"]
